# language-learning

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  GITHUB_ACTIONS_SETUP.md  QUICK_START.md  README.md  docker-compose.env.example  docker-compose.yml  justfile  setup.sh
.cursor/rules/: accessibility-quality-standards.mdc  audio-playback-requirements.mdc  code-standards.mdc  core-product-principles.mdc  event-instrumentation.mdc  success-metrics-non-goals.mdc  technical-implementation-strategy.mdc  user-experience-flow.mdc
.github/: README.md
.github/workflows/: badges.yml  ci.yml  test-and-quality.yml
backend/: .flake8  Dockerfile  conftest.py  env.example  justfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  ai.py  auth.py  exercises.py  gamification.py  lessons.py  progress.py  users.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  gamification.py  learning.py  progress.py  user.py
backend/app/schemas/: __init__.py  auth.py  exercise.py  gamification.py  lesson.py  progress.py  user.py
backend/app/services/: __init__.py  ai_service.py  user_service.py
backend/features/: user_registration.feature
backend/features/steps/: user_registration_steps.py
backend/scripts/: seed_data.py  seed_data_simple.py
backend/tests/: test_basic.py
examples/: just-examples.sh
frontend/: .eslintrc.js  Dockerfile  cucumber.js  justfile  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/features/: README.md  accessibility_and_input_methods.feature  analytics_events.feature  functional_telemetry.feature  lightweight_progress_signals.feature  listen_first_reveal_gate.feature  micro_tips.feature  phrase_replays_after_reveal.feature  progression_completion.feature  speaking_feedback.feature  transcript_availability.feature
frontend/features/steps/: accessibility_and_input_methods_steps.ts  analytics_events_steps.ts  common_steps.js  common_steps.ts  functional_telemetry_steps.ts  lightweight_progress_signals_steps.js  lightweight_progress_signals_steps.ts  listen_first_reveal_gate_steps.js  listen_first_reveal_gate_steps.ts  micro_tips_steps.ts  phrase_replays_after_reveal_steps.js  phrase_replays_after_reveal_steps.ts  progression_completion_steps.ts  speaking_feedback_steps.ts  transcript_availability_steps.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  setupTests.ts
frontend/src/components/: AudioPlayer.tsx  ErrorBoundary.tsx  LessonContainer.tsx  PhrasePlayer.tsx  ProgressIndicator.tsx  TranscriptToggle.tsx
frontend/src/components/__tests__/: AudioPlayer.test.tsx  ErrorBoundary.test.tsx  (+2 more)
frontend/src/constants/: audio.ts  browser.ts  microcopy.ts  progress.ts
frontend/src/data/: sampleLessons.ts
frontend/src/hooks/: useAudioPlayback.ts
frontend/src/services/: audioPlaybackService.ts  eventTrackingService.ts  lessonService.ts  logger.ts
frontend/src/types/: lesson.ts
frontend/src/utils/: errorUtils.ts
nginx/: nginx.conf
project_docs/: accessibility_qa_checklist.md  commit_breakdown_listen_first_micro_lesson.md  d_1_ai_executable_task_breakdown_listen_first_micro_lesson.md  deliverable_chunk_practice_pronunciation_functional_specification.md  project_summary_mvp_goals_roadmap.md
project_docs/d1_docs/: commit_1_foundation_notes.md  d_1_ai_executable_task_breakdown_listen_first_micro_lesson.md
project_docs/d2_docs/: README.md  analytics_catalog.md  copy_deck_template.md  d2_task_plan.md  deliverable_chunk_practice_pronunciation_functional_specification.md  qa_checklist_template.md
project_docs/d2_docs/features/: accessibility.feature  analytics_events.feature  copy_conformance.feature  micro_tips.feature  progression_completion.feature  resilience_errors.feature  speaking_feedback.feature
project_docs/features/: accessibility_and_input_methods.feature  functional_telemetry.feature  lightweight_progress_signals.feature  listen_first_reveal_gate.feature  performance_sanity.feature  phrase_replays_after_reveal.feature  resilience_and_recovery.feature  transcript_availability.feature
project_docs/the_future/: themeable_gamification_functional_brief.md
(+5 files in other folders)
